ACPScripts/Camera_use_python/libflipro.h

///
/// @brief Supported Connection Types
/// @enum FPROCONNECTION
///
/// This enumeration is used as part of the FPRODEVICEINFO structure to
/// return the physical connection type to the camera.
///
/// @var FPROCONNECTION::FPRO_CONNECTION_USB 
/// @brief Camera is connected with a USB link.
///
/// @var FPROCONNECTION::FPRO_CONNECTION_FIBRE 
/// @brief Camera is connected with a Fibre Optic link.
///
typedef enum
{
	FPRO_CONNECTION_USB,
	FPRO_CONNECTION_FIBRE,
} FPROCONNECTION;
///
/// @brief Known USB Connection Speeds
/// @enum FPROUSBSPEED
///
/// This enumeration is used as part of the FPRODEVICEINFO structure to
/// return the detected USB connection speed.  FLI Cameras require a
/// FPRO_USB_SUPERSPEED USB connection in order to transfer image data reliably.
///
/// @var FPROUSBSPEED::FPRO_USB_FULLSPEED 
/// @brief Full Speed Connection
///
/// @var FPROUSBSPEED::FPRO_USB_HIGHSPEED 
/// @brief High Speed Connection
///
/// @var FPROUSBSPEED::FPRO_USB_SUPERSPEED 
/// @brief Super Speed Connection
///
typedef enum
{
	FPRO_USB_FULLSPEED,
	FPRO_USB_HIGHSPEED,
	FPRO_USB_SUPERSPEED
} FPROUSBSPEED;
///
/// @typedef device_info_t FPRODEVICEINFO
/// @brief Device Information
///
/// This is used as the Camera Device enumeration structure.  It is
/// returned by the #FPROCam_GetCameraList function and contains the
/// list of detected cameras.  To open a connection to a specific camera,
/// a single FPRODEVICEINFO structure is passed to the #FPROCam_Open function.
///
/// @var FPRODEVICEINFO::cFriendlyName 
/// @brief Human readable friendly name of the USB device.
///        This string along with the cSerialNo field provide a unique name
///        for your device suitable for a user interface.
/// @var FPRODEVICEINFO::cSerialNo 
/// @brief The manufacturing serial number of the device.
/// @var FPRODEVICEINFO::cDevicePath
/// @brief The OS device Path.  Used internally by the API for opening requisite file 
///        descriptors to connect to the device.
/// @var FPRODEVICEINFO::eConnType 
/// @brief The physical connection type.  If the connection type is FPRO_CONNECTION_USB, then the
///        uiVendorId, uiProdId, and eUSBSpeed fields are also filled in.  Otherwise those fields
///        are not used and their contents is undefined.
/// @var FPRODEVICEINFO::uiVendorId 
/// @brief The USB vendor ID.  This field is applicable only when the eCOnnType is #FPRO_CONNECTION_USB.
/// @var FPRODEVICEINFO::uiProdId 
/// @brief The USB Product ID.  This field is applicable only when the eCOnnType is #FPRO_CONNECTION_USB.
/// @var FPRODEVICEINFO::eUSBSpeed 
/// @brief The USB connection speed of the device.  This field is applicable only when the eCOnnType is #FPRO_CONNECTION_USB.
/// <br>NOTE: When connected through USB, FLI Cameras require a FPRO_USB_SUPERSPEED USB connection 
///           in order to transfer image data reliably.
typedef struct device_info_t
{
	wchar_t        cFriendlyName[FPRO_USB_STRING_MAXLEN];
	wchar_t        cSerialNo[FPRO_USB_STRING_MAXLEN];
	wchar_t        cDevicePath[FPRO_DEVICE_MAX_PATH_LENGTH];
	FPROCONNECTION eConnType;
	uint32_t       uiVendorId;
	uint32_t       uiProdId;
	FPROUSBSPEED   eUSBSpeed;
} FPRODEVICEINFO;
///
/// @typedef sensor_mode_t FPROSENSMODE
/// @brief Sensor Modes
///
/// The FLI Camera devices support the concept of 'Modes'.  A mode is a collection
/// of settings for the camera.  As this structure illustrates, the mode has a
/// name and an index.  The name can be used primarily for a user interface so that
/// a user can see a friendly and descriptive name for the mode.  The index is used by
/// the API to set a particular mode on the camera.  See #FPROSensor_SetMode, #FPROSensor_GetMode,
/// and #FPROSensor_GetModeCount.
///
/// @var FPROSENSMODE::uiModeIndex 
/// @brief The corresponding index of the mode name.
/// @var FPROSENSMODE::wcModeName 
/// @brief A descriptive human readable name for the mode suitable for
///        a user interface.
typedef struct sensor_mode_t
{
	uint32_t uiModeIndex;
	wchar_t  wcModeName[FPRO_SENSOR_MODE_NAME_LENGTH];
} FPROSENSMODE;
/// @typedef FPROSTREAMERSTATUS
/// @brief Streamer Status
///
/// The FLI Camera devices support the ability to stream images to disk.
/// The FPROFrame_Streamxxx() API's are used to enable, start, and stop the streaming process.
/// In addition, #FPROFrame_StreamGetStatistics() is provided to retrieve the current stream
/// statistics.  The status is part of the #FPROSTREAMSTATS statistics returned by the
/// #FPROFrame_StreamGetStatistics() API.  Note that this status is with respect to  images
/// arriving from the camera.  Multiple frames can be received and queued to be written to disk.
/// As such, in order to correctly determine when all images have been received and written
/// to the disk, you need to check the #FPROSTREAMSTATS uiDiskFramesWritten field and make sure it
/// matches the number of images you requested.  If you stop the stream before all frames are
/// written to the disk, any frames not fully written will be lost.
///
/// @var FPROSTREAMERSTATUS::FPRO_STREAMER_STOPPED 
/// @brief Streaming Stopped.  This is the default state.  It also enters this state when the
/// requested number of images have been streamed or #FPROFrame_StreamStop() is called.
/// @var FPROSTREAMERSTATUS::FPRO_STREAMER_STREAMING 
/// @brief Streaming is running.  This state is entered when streaming is started via the FPROFrame_StreamStart() API.
/// It remains in this state until #FPROFrame_StreamStop() is called, the requested number of images have been streamed, or
/// an error has caused streaming to stop.
/// @var FPROSTREAMERSTATUS::FPRO_STREAMER_STOPPED_ERROR 
/// @brief If streaming has stopped due to an error, the status will be less than 0.  Consult the log file for error messages.
typedef enum
{
	FPRO_STREAMER_STOPPED_ERROR = -1,
	FPRO_STREAMER_STOPPED= 0,
	FPRO_STREAMER_STREAMING,

} FPROSTREAMERSTATUS;
///
/// @typedef fpro_stream_stats_t FPROSTREAMSTATS
/// @brief Streamer Statistics
///
/// The FLI Camera devices support the ability to stream images to disk.
/// The FPROFrame_Streamxxx() API's are used to enable, start, and stop the streaming process.
/// In addition, #FPROFrame_StreamGetStatistics() is provided to retrieve the current stream
/// statistics in this structure.  The statistics are reset each time #FPROFrame_StreamStart() 
/// is called.
///
/// @var FPROSTREAMSTATS::uiNumFramesReceived 
/// @brief The number of frames received from the camera.
/// @var FPROSTREAMSTATS::uiTotalBytesReceived 
/// @brief The total number of bytes received from the camera.
/// @var FPROSTREAMSTATS::uiDiskFramesWritten 
/// @brief The total number of frames written to disk.
/// @var FPROSTREAMSTATS::dblDiskAvgMBPerSec 
/// @brief The average disk write rate in MBytes/sec on a per frame basis
/// @var FPROSTREAMSTATS::dblDiskPeakMBPerSec 
/// @brief The peak write rate in MBytes/sec; the fastest a given frame was written.
/// @var FPROSTREAMSTATS::iStatus 
/// @brief The status of the streamer. See #FPROSTREAMERSTATUS.
/// @var FPROSTREAMSTATS::uiReserved 
/// @brief Reserved for internal use.
typedef struct fpro_stream_stats_t
{
	uint32_t            uiNumFramesReceived;
	uint64_t            uiTotalBytesReceived;
	uint64_t            uiDiskFramesWritten;
	double              dblDiskAvgMBPerSec;
	double              dblDiskPeakMBPerSec;
	FPROSTREAMERSTATUS  iStatus;
	uint32_t            uiReserved;
} FPROSTREAMSTATS;
//////////////////////////////////////////
// Camera Open, Close
//////////////////////////////////////////
//////////////////////////////////////////
//////////////////////////////////////////
/// 
/// @brief FPROCam_GetCameraList
/// 
/// Returns a list of cameras detected on the host.  Most often it is the
/// first function called in the API in order to provide a list of
/// available devices to the user.  The information provided in the 
/// FPRODEVICEINFO structure allows unique names to be constructed for
/// each camera. A pointer an FPRODEVICEINFO structure corresponding to a 
/// user selected device is passed to a subsequent call to FPROCam_Open() 
/// in order to connect to the camera.
///
///	@param pDeviceInfo - Pointer to user allocated memory to hold the list of devices.
/// @param pNumDevices - On entry, the max number of devices that may be assigned to the list.
///                      Note that the pDeviceInfo pointer must point to enough memory to hold
///                      the given pNumDevices.  On exit, it contains the number of devices
///                      detected and inserted in the list.  This can be less than the requested
///                      number.  If it returns the requested number, there may be additional 
///                      devices connected.
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
///
LIBFLIPRO_API FPROCam_GetCameraList(FPRODEVICEINFO *pDeviceInfo, uint32_t *pNumDevices);
//////////////////////////////////////////
///
/// @brief Connects to the camera specified by the pDevInfo parameter.  
///
/// This call must complete successfully in order to use any calls in the API
/// that communicate with the camera.
/// The returned handle is passed to all such subsequent API calls.
///
///	@param pDevInfo - Pointer to device description as returned by FPROCam_GetCameraList().
/// @param pHandle - On successful completion, it contains the device handle to use in 
///                  subsequent API calls.
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROCam_Open(FPRODEVICEINFO *pDevInfo, int32_t *pHandle);
//////////////////////////////////////////
///
/// @brief Disconnects from the camera an releases the handle.
///
/// @param iHandle - Connected camera handle to close.
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROCam_Close(int32_t iHandle);
//////////////////////////////////////////
///
/// @brief Computes the size in bytes of the image frame based on the given pixel width and height.  
///
/// This function uses the actual camera settings to determine the size of the image data that
/// will be received.  As such, all camera settings must be set up for your image prior to calling
/// this function.  Since communications with the camera is required to complete this function
/// successfuly, it can fail on the communication.  In addition, this function can take tens of 
/// milli-seconds to complete because of this communication so it should not be called in time 
/// critical situations.
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
/// @param uiPixelWidth - The width of the expected image in pixels.
/// @param uiPixelHeight - The height of the expected image in pixels.
///
/// @return The size of the expected image frame in bytes on success, less than 0 on failure.
LIBFLIPRO_API FPROFrame_ComputeFrameSize(int32_t iHandle,uint32_t uiPixelWidth, uint32_t uiPixelHeight);
//////////////////////////////////////////
///
/// @brief Initializes the Streamer interfaces.
///
/// The Streamer interfaces enable an efficient stream-to-functionality.  Frames
/// are streamed directly from the camera to disk.  This function initializes the 
/// various sub modules, allocates resources, and enables the streaming capability.
///  This function must be called prior to #FPROFrame_StreamStart(). 
///
/// The streaming operation streams frames of the same size.  In order to change the frame size,
/// the streaming must be stopped and deinitialized using the #FPROFrame_StreamStop() and 
/// FPROFrame_StreamDeinitialize() API's respectively.  Then a new stream can be initialzed with
/// a new frame size.
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
///	@param uiFrameSizeBytes - Size of the frames that will be streamed.
/// @param pRootPath - Name of the root path to store the files on disk.
/// @param pFilePrefix - A file name prefix to be applied to each file being saved..
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROFrame_StreamInitialize(int32_t iHandle, uint32_t uiFrameSizeBytes, wchar_t *pRootPath, wchar_t *pFilePrefix);
//////////////////////////////////////////
///
/// @brief Deinitializes the Streamer interfaces.
///
/// This funtion deinitializes the streamer interfaces.  All streaming operations are stopped
/// and streaming resources are returned to the system.
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROFrame_StreamDeinitialize(int32_t iHandle);
//////////////////////////////////////////
///
/// @brief Start the streaming operation.
///
/// This funtion starts the actual streaming operations.  The streaming interfaces must
/// have been previously initialized by a successful call to #FPROFrame_StreamInitialize().
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
///	@param uiFrameCount - Number of frames to stream.  Zero (0) == infinite (until the disk fills
///                       or #FPROFrame_StreamStop is called.
///	@param uiFrameIntervalMS - The frame interval in milliseconds() (exposure time + delay).
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROFrame_StreamStart(int32_t iHandle,uint32_t uiFrameCount,uint64_t uiFrameIntervalMS);
//////////////////////////////////////////
///
/// @brief Stop the streaming operation.
///
/// This funtion stops the actual streaming operations.
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROFrame_StreamStop(int32_t iHandle);
//////////////////////////////////////////
///
/// @brief Stop the streaming operation.
///
/// This funtion stops the actual streaming operations.
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
///	@param pStats - The returned statistics. See #FPROSTREAMSTATS.
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROFrame_StreamGetStatistics(int32_t iHandle, FPROSTREAMSTATS *pStats);
//////////////////////////////////////////
///
/// @brief Sets the exposure time of the image sensor.
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
/// @param uiExposureTime - Exposure time in nanosecond increments.
/// @param uiFrameDelay - Frame delay (end - to - start) time in nanoseconds.
///                       When performing multiple exposures with a single trigger, the frame 
///                       delay is the time from the end of exposure of a frame
///                       to the start of exposure of the next frame.
/// @param bImmediate - This parameter affects the way exposure starts when the 
///                     FPROFrame_CaptureStart() function is called.  The camera
///                     image sensor is continually exposing its pixels on a row
///                     by row basis. When this parameter is set to true, the exposure 
///                     for the frame begins at whatever image sensor row is currently
///                     being exposed.  The raw image data returned by the FPROFrame_GetVideoFrame()
///                     call begins with this row (most likely not row 0).  The row that
///                     starts the raw video frame is recorded in the meta data for the image frame.
///
///                     When this parameter is set to false, the camera waits until row 0 is
///                     being exposed before starting the frame exposure.  In this case, the
///                     image frame data returned by the FPROFrame_GetVideoFrame() call will
///                     start at row 0.
///
/// <br>
/// NOTE: The Exposure Time and Frame Delay values are translated to camera specific units which
///       are in turn dependent on the current imaging mode of the camera (e.g. LDR vs HDR),
///       as well as the camera model.
///       The API does its best to perform the necessary conversions automatically
///       when the modes are changed. It is recommended, however,  to make sure the 
///       desired exposure times are set after imaging modes have changed using this 
///       and its counterpart API function #FPROCtrl_GetExposure().
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROCtrl_SetExposure(int32_t iHandle, uint64_t uiExposureTime, uint64_t uiFrameDelay, bool bImmediate);
//////////////////////////////////////////
///
/// @brief Retrieves the current mode name for the specified index.  
///
/// The number of available modes are retrieved using the #FPROSensor_GetModeCount API.
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
/// @param uiModeIndex - The index of the mode to retrieve.
/// @param pMode - Buffer for the returned mode information.
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROSensor_GetMode(int32_t iHandle, uint32_t uiModeIndex, FPROSENSMODE *pMode);
//////////////////////////////////////////
///
/// @brief Retrieves the current mode count and current mode index setting.
///
/// Mode information for a given index is retrieved using the 
/// #FPROSensor_GetMode() API.
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
/// @param pCount - Buffer for the number of available modes.
/// @param pCurrentMode - Buffer for index of the currently assigned mode.
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROSensor_GetModeCount(int32_t iHandle, uint32_t *pCount,uint32_t *pCurrentMode);
//////////////////////////////////////////
///
/// @brief Sets the desired horizontal and vertical binning.
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
/// @param uiXBin - Horizontal bin setting.
/// @param uiYBin - Vertical bin setting.
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROSensor_SetBinning(int32_t iHandle, uint32_t uiXBin, uint32_t uiYBin);
//////////////////////////////////////////
///
/// @brief Sets the current mode specified by the given index.
///
///	@param iHandle - The handle to an open camera device returned from FPROCam_Open()
/// @param uiModeIndex - The index of the mode to set.
///
/// @return Greater than or equal to 0 on success, less than 0 on failure.
LIBFLIPRO_API FPROSensor_SetMode(int32_t iHandle, uint32_t uiModeIndex);